Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/overrridecrash/B.out
B.java:12:27: compiler.err.illegal.combination.of.modifiers: private, protected
A.java:4:27: compiler.err.illegal.combination.of.modifiers: private, protected
2 errors
